<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/title"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
        android:layout_marginTop="12dp"

        android:id="@+id/rgGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_macho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_femea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>


    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="4dp"
        android:id="@+id/etDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/describe_details_such_as_lifetime_vaccination_castration" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_anunciar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

</LinearLayout>