<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTituloAnuncio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="15sp"
                android:text="@string/genre"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tvGeneroAnuncio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="15sp"
                tools:text="@string/genre"
                android:layout_marginTop="4dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tvDescricaoAnuncio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:paddingTop="2dp"
            android:textSize="15sp"
            tools:text="@string/describe_details_such_as_lifetime_vaccination_castration"
            android:layout_marginTop="4dp"/>


        <TextView
            android:id="@+id/tvDataAnuncio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="data"
            android:gravity="end"
            />


    </LinearLayout>

</android.support.v7.widget.CardView>